<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">FlowTube</string>
	
    <!-- Splash Screen -->
    <string name="splash_message">Experience a better way to browse YouTube</string>
	
    <!-- Bottom Navigation -->
    <string name="btn_nav_home">Home</string>
    <string name="btn_nav_subscription">Subscription</string>
    <string name="btn_nav_library">Library</string>
    <string name="btn_nav_community">Community</string>

    <!-- Search Activity -->
    <string name="search_no_results" translatable="false">No Results</string>
    <string name="search_no_results_description" translatable="false">No Results Description</string>

    
    <string name="back_button" translatable="false">Back</string>
    <string name="cast_button" translatable="false">Cast</string>
    <string name="cc_button" translatable="false">CC</string>
    <string name="settings_button" translatable="false">Settings</string>
    <string name="replay_10_seconds" translatable="false">Replay 10 Seconds</string>
    <string name="play_pause_button" translatable="false">Play Pause</string>
    <string name="forward_10_seconds" translatable="false">Forward 10 Seconds</string>
    <string name="orientation_toggle" translatable="false">Rotate Screen</string>
    <string name="channel_avatar" translatable="false">Channel Avatar</string>
    <string name="expand_comments" translatable="false">Expand Comments</string>
    
    <string name="like_button">Like</string>
    <string name="dislike_button">Dislike</string>
    <string name="comment_button">Comment</string>
    <string name="save_button">Save</string>
    <string name="share_button">Share</string>
    <string name="more_options">More</string>

</resources>